--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+<div class="liquid-bg">
+    <div class="blob" style="top: -10%; left: -10%;"></div>
+    <div class="blob" style="bottom: 10%; right: 10%; background: #e3f2fd; animation-delay: -5s;"></div>
+</div>
+    
 <header class="main-header">
     <div class="container nav-container">
         <a href="#hero" class="logo-link">
