--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
     <div class="blob" style="top: -10%; left: -10%;"></div>
     <div class="blob" style="bottom: 10%; right: 10%; background: #e3f2fd; animation-delay: -5s;"></div>
 </div>
+
+<div class="liquid-bg">
+    <div class="blob"></div>
+</div>
     
 <header class="main-header">
     <div class="container nav-container">
