--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 <div class="liquid-bg">
     <div class="blob"></div>
 </div>
+
+<div class="liquid-bg"><div class="blob"></div></div>
     
 <header class="main-header">
     <div class="container nav-container">
