--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                         {% unless item.is_button %}
                             <a href="{{ item.link }}">{{ item.title }}</a>
                         {% else %}
-                            <a href="{{ item.link }} class="btn-nav"">{{ item.title }}</a>
+                            <a href="{{ item.link }}" class="btn-nav">{{ item.title }}</a>
                         {% endunless %}
                     </li>
                 {% endfor %}
