--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,1 +1,3 @@
-<img src="{{ '/assets/img/logo.png' | relative_url }}" alt="Доктор Стафий" class="header-logo">
+<a href="#hero" class="logo-link">
+  <img src="{{ '/assets/img/logo.png' | relative_url }}" alt="Доктор Стафий" class="header-logo">
+</a>
