New contacts for booking and footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,11 @@
         <div class="footer-item">
             <p>{{ site.author.address }}</p>
         </div>
+        
+        <div class="footer-item">
+            <p>WhatsApp/Телефон:</p>
+            <p>{{ site.author.phone }}</p>
+        </div>
 
         <nav class="footer-item">
             <ul class="footer-links">
