--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="{{ '/assets/img/logo.png' | relative_url }}">
     
     <link rel="stylesheet" href="{{ "/assets/css/style_optimized.css" | relative_url }}">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script:wght@400;700&family=Source+Sans+3:wght@300;400;600&display=swap" rel="stylesheet">
