--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
     
     <link rel="icon" type="image/png" href="{{ '/assets/img/logo.png' | relative_url }}">
     
@@ -11,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script:wght@400;700&family=Source+Sans+3:wght@300;400;600&display=swap" rel="stylesheet">
     
     {% include google.html %}
+
+    {% seo %}
 
 </head>
 <body>
